XIVY-13510 Temporary fix for select / combobox menu z-index

--- a/packages/inscription/src/inscription/inscription-ui.css
+++ b/packages/inscription/src/inscription/inscription-ui.css
@@ -20,3 +20,7 @@
   background-color: var(--glsp-editor-selected);
   border: none;
 }
+body .ui-select-content,
+body .ui-popover-content {
+  z-index: 1010;
+}
